changes to astral plane dimension

--- a/data/nmr/worldgen/biome/astral_biome.json
+++ b/data/nmr/worldgen/biome/astral_biome.json
@@ -3,8 +3,8 @@
     "downfall": 0.4,
     "has_precipitation": false,
     "effects": {
-      "sky_color": 7485,
-      "fog_color": 2829893,
+      "sky_color": 535892,
+      "fog_color": 789778,
       "water_color": 9408399,
       "water_fog_color": 3355443,
       "grass_color": 4933961,
