--- a/data/nmr/predicate/world/cold_biomes.json
+++ b/data/nmr/predicate/world/cold_biomes.json
@@ -29,6 +29,30 @@
         {
           "condition": "minecraft:location_check",
           "predicate": {
+            "biome": "eden:snowy_beach"
+          }
+        },
+        {
+          "condition": "minecraft:location_check",
+          "predicate": {
+            "biome": "eden:snowy_plains"
+          }
+        },
+        {
+          "condition": "minecraft:location_check",
+          "predicate": {
+            "biome": "eden:ice_spikes"
+          }
+        },
+        {
+          "condition": "minecraft:location_check",
+          "predicate": {
+            "biome": "eden:frozen_river"
+          }
+        },
+        {
+          "condition": "minecraft:location_check",
+          "predicate": {
             "biome": "terralith:frozen_cliffs"
           }
         },
